lets improve the model from this repo

--- a/edaSRD.ipynb
+++ b/edaSRD.ipynb
@@ -282,6 +282,23 @@
    ],
    "source": [
     "path = 'data/SpacedRepetitionData.csv'\n",
+    "grammatical_mapping = {\n",
+    "    \"vblex\": \"lexical verbs\",\n",
+    "    \"pri\": \"present indicative\",\n",
+    "    \"p3\": \"third person\",\n",
+    "    \"sg\": \"singular\",\n",
+    "    \"pl\": \"plural\",\n",
+    "    \"det\": \"determiner\",\n",
+    "    \"def\": \"definite\",\n",
+    "    \"f\": \"feminine\",        # Note: Spelled \"feminite\" in the original image\n",
+    "    \"m\": \"masculine\",\n",
+    "    \"nt\": \"neuter\",\n",
+    "    \"nom\": \"nominative case\", # Note: Cut off as \"nominative ca...\" in the image\n",
+    "    \"n\": \"noun\",\n",
+    "    \"pr\": \"preposition\",\n",
+    "    \"prn\": \"pronoun\",\n",
+    "    \"itg\": \"interrogative\"\n",
+    "}\n",
     "df = pd.read_csv(path)\n",
     "df[\"timestamp\"] = pd.to_datetime(df[\"timestamp\"],unit='s')\n",
     "df[\"delta\"] = pd.to_timedelta(df[\"delta\"], unit='s') \n",
@@ -292,163 +309,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "7e519994",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>p_recall</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>delta</th>\n",
-       "      <th>user_id</th>\n",
-       "      <th>learning_language</th>\n",
-       "      <th>ui_language</th>\n",
-       "      <th>lexeme_id</th>\n",
-       "      <th>lexeme_string</th>\n",
-       "      <th>history_seen</th>\n",
-       "      <th>history_correct</th>\n",
-       "      <th>session_seen</th>\n",
-       "      <th>session_correct</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2013-02-28 18:28:01</td>\n",
-       "      <td>320 days 00:27:15</td>\n",
-       "      <td>u:FO</td>\n",
-       "      <td>de</td>\n",
-       "      <td>en</td>\n",
-       "      <td>76390c1350a8dac31186187e2fe1e178</td>\n",
-       "      <td>lernt/lernen&lt;vblex&gt;&lt;pri&gt;&lt;p3&gt;&lt;sg&gt;</td>\n",
-       "      <td>6</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2013-02-28 18:28:01</td>\n",
-       "      <td>320 days 00:27:15</td>\n",
-       "      <td>u:FO</td>\n",
-       "      <td>de</td>\n",
-       "      <td>en</td>\n",
-       "      <td>7dfd7086f3671685e2cf1c1da72796d7</td>\n",
-       "      <td>die/die&lt;det&gt;&lt;def&gt;&lt;f&gt;&lt;sg&gt;&lt;nom&gt;</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2013-02-28 18:28:01</td>\n",
-       "      <td>320 days 00:27:15</td>\n",
-       "      <td>u:FO</td>\n",
-       "      <td>de</td>\n",
-       "      <td>en</td>\n",
-       "      <td>35a54c25a2cda8127343f6a82e6f6b7d</td>\n",
-       "      <td>mann/mann&lt;n&gt;&lt;m&gt;&lt;sg&gt;&lt;nom&gt;</td>\n",
-       "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0.5</td>\n",
-       "      <td>2013-02-28 18:28:01</td>\n",
-       "      <td>320 days 00:27:15</td>\n",
-       "      <td>u:FO</td>\n",
-       "      <td>de</td>\n",
-       "      <td>en</td>\n",
-       "      <td>0cf63ffe3dda158bc3dbd55682b355ae</td>\n",
-       "      <td>frau/frau&lt;n&gt;&lt;f&gt;&lt;sg&gt;&lt;nom&gt;</td>\n",
-       "      <td>6</td>\n",
-       "      <td>5</td>\n",
-       "      <td>2</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2013-02-28 18:28:01</td>\n",
-       "      <td>320 days 00:27:15</td>\n",
-       "      <td>u:FO</td>\n",
-       "      <td>de</td>\n",
-       "      <td>en</td>\n",
-       "      <td>84920990d78044db53c1b012f5bf9ab5</td>\n",
-       "      <td>das/das&lt;det&gt;&lt;def&gt;&lt;nt&gt;&lt;sg&gt;&lt;nom&gt;</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   p_recall           timestamp             delta user_id learning_language  \\\n",
-       "0       1.0 2013-02-28 18:28:01 320 days 00:27:15    u:FO                de   \n",
-       "1       0.5 2013-02-28 18:28:01 320 days 00:27:15    u:FO                de   \n",
-       "2       1.0 2013-02-28 18:28:01 320 days 00:27:15    u:FO                de   \n",
-       "3       0.5 2013-02-28 18:28:01 320 days 00:27:15    u:FO                de   \n",
-       "4       1.0 2013-02-28 18:28:01 320 days 00:27:15    u:FO                de   \n",
-       "\n",
-       "  ui_language                         lexeme_id  \\\n",
-       "0          en  76390c1350a8dac31186187e2fe1e178   \n",
-       "1          en  7dfd7086f3671685e2cf1c1da72796d7   \n",
-       "2          en  35a54c25a2cda8127343f6a82e6f6b7d   \n",
-       "3          en  0cf63ffe3dda158bc3dbd55682b355ae   \n",
-       "4          en  84920990d78044db53c1b012f5bf9ab5   \n",
-       "\n",
-       "                      lexeme_string  history_seen  history_correct  \\\n",
-       "0  lernt/lernen<vblex><pri><p3><sg>             6                4   \n",
-       "1     die/die<det><def><f><sg><nom>             4                4   \n",
-       "2          mann/mann<n><m><sg><nom>             5                4   \n",
-       "3          frau/frau<n><f><sg><nom>             6                5   \n",
-       "4    das/das<det><def><nt><sg><nom>             4                4   \n",
-       "\n",
-       "   session_seen  session_correct  \n",
-       "0             2                2  \n",
-       "1             2                1  \n",
-       "2             1                1  \n",
-       "3             2                1  \n",
-       "4             1                1  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mdf\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mlexeme_string\u001b[39m\u001b[33m\"\u001b[39m].unique().count()\n",
+      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
+     ]
     }
    ],
    "source": [
-    "df[\"delta\"] = pd.to_timedelta(df[\"delta\"], unit='s') \n",
-    "df.head()"
+    "df[\"lexeme_string\"].unique().count()\n"
    ]
   },
   {
