updated model1 with MCM(needs work) added a small functioninal frontend that can be polished

--- a/edaSRD.ipynb
+++ b/edaSRD.ipynb
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "3b9ac94c",
    "metadata": {},
    "outputs": [],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "e31b1b09",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "4             4                4             1                1  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "b31be196",
    "metadata": {},
    "outputs": [
@@ -352,33 +352,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "0f8f3537",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    0.850679\n",
-       "1    0.850679\n",
-       "2    0.850679\n",
-       "3    0.850679\n",
-       "4    0.850679\n",
-       "Name: user_global_accuracy, dtype: float64"
+       "<StringArray>\n",
+       "[                        'vblex',                           'det',\n",
+       "                             'n',                            'pr',\n",
+       "                           'prn',                         'vbser',\n",
+       "                        'cnjcoo',                           'adv',\n",
+       "                           'adj',                           '*sf',\n",
+       "                        'cnjadv',                        'cnjsub',\n",
+       "                         'vbmod',                            'ij',\n",
+       "                          'apos',                           'gen',\n",
+       "                          'vbdo',      '@common_phrases:a_demain',\n",
+       "        '@common_phrases:il_y_a', '@common_phrases:comment_ca_va',\n",
+       "   '@common_phrases:a_plus_tard',                       'vbhaver',\n",
+       "                 '@ij:thank_you',                           'rel',\n",
+       "    '@common_phrases:ca_va_bien',                          'vaux',\n",
+       "                        'preadv',                  '@cnj:des_que',\n",
+       "                '@cnj:alors_que',            '@adv:s_il_te_plait',\n",
+       "              '@cnj:du_fait_que',               '@cnj:depuis_que',\n",
+       "                 '@ij:au_revoir',       '@common_phrases:de_rien',\n",
+       "                            'np',            '@ij:merci_beaucoup',\n",
+       "                           'num',           '@ij:auf_wiedersehen',\n",
+       "             '@ij:buenas_noches',               '@ij:buenos_dias',\n",
+       "               '@itg:est_ce_que',                   '@adv:a_part',\n",
+       "                 '@pr:un_peu_de',                '@adv:por_favor',\n",
+       "                  '@ij:bis_bald',     '@common_phrases:a_bientot',\n",
+       "        '@common_phrases:a_plus',          '@adv:s_il_vous_plait',\n",
+       "                   '@pr:pres_de',             '@adv:por_supuesto',\n",
+       "                        'predet',                   '@pr:plus_de',\n",
+       "                         'pprep',                '@cnj:parce_que',\n",
+       "               '@cnj:tandis_que',               '@adv:a_peu_pres',\n",
+       "                  '@neg:plus_de',              '@adv:tout_a_fait',\n",
+       "              '@neg:pas_du_tout',                '@adv:peut_etre',\n",
+       "              '@cnj:pendant_que',           '@itg:que_est_ce_que',\n",
+       "                 '@pr:a_travers',               '@adv:en_general',\n",
+       "                  '@adv:au_dela',                  '@adv:en_fait',\n",
+       "                 '@cnj:pour_que',                '@pr:au_dela_de',\n",
+       "                   '@pr:afin_de',                 '@pr:autant_de',\n",
+       "                 '@cnj:bien_que',                '@pr:a_cause_de',\n",
+       "                 '@pr:a_cote_de',                '@cnj:apres_que',\n",
+       "           '@prn:n_importe_quoi',                 '@adv:au_moins',\n",
+       "             '@adv:a_posteriori',                 '@adv:a_priori',\n",
+       "                '@cnj:avant_que',                           'ord',\n",
+       "               '@cnj:autant_que']\n",
+       "Length: 81, dtype: str"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"user_global_accuracy\"].head()"
+    "df[\"pos_tag\"].unique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "3e661f26",
    "metadata": {},
    "outputs": [
@@ -395,7 +432,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
