final cleaning and ordering of the repo

--- a/notebooks/trial.ipynb
+++ b/notebooks/trial.ipynb
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "id": "6d1c18b2",
    "metadata": {},
    "outputs": [
@@ -279,10 +279,10 @@
     "\n",
     "# 1. Read the file. \n",
     "# sep='\\s+' is the magic regex command that handles any amount of spaces or tabs.\n",
-    "df = pd.read_csv(\"hlr/results/leitner/leitner.SpacedRepetitionData.preds\", sep='\\s+')\n",
+    "df = pd.read_csv(\"../resultXGBoost.pred\", sep='\\s+')\n",
     "\n",
     "# 2. Save it as a proper Comma-Separated Values (CSV) file\n",
-    "df.to_csv(\"hlr/results/leitner/leitner.SpacedRepetitionData.csv\", index=False)\n",
+    "df.to_csv(\"../XGBpred.csv\", index=False)\n",
     "\n",
     "print(\"✅ Boom! File perfectly converted to clean_predictions.csv\")"
    ]
